separated component css & fixed icon not showing live

--- a/src/App.css
+++ b/src/App.css
@@ -8,298 +8,3 @@
     margin: 0px auto;
     text-align: center;
   }
-
-  @property --gradient-angle{
-    syntax: '<angle>';
-    inherits: false;
-    initial-value: 135deg;
-  }
-
-  .container{
-    max-width: 800px;
-    width: 100%;
-    margin: auto;
-    padding: 40px 0 40px 0;
-  }
-  
-  .input-container{
-    display: flex;
-    margin: auto;
-    flex-wrap: wrap;
-    max-width: 600px;
-    width: 80%;
-    align-items: center;
-    justify-content: center;
-  }
-
-  input{
-    height: 40px;
-    width: 60%;
-    padding: 0px 20px;
-    border-radius: 50px;
-    border: 2px solid rgb(72, 59, 173);
-    transition: border .2s;
-    color: rgb(98, 98, 98);
-    font-family: 'Poppins';
-  }
-
-  input:hover{
-    border: 2px solid rgb(101, 82, 248);
-    
-  }
-
-  input:focus{
-    border: 3px solid rgb(101, 82, 248);
-    outline: none;
-    
-  }
-
-  input::placeholder{
-    font-size: 0.8rem;
-    color: rgb(197, 197, 197);
-  }
-
-  .submit{
-    color: rgb(255, 255, 255);
-    /* padding:  0px 15px; */
-    max-width: 90px;
-    width: 12vw;
-    min-width: 80px;
-    height: 40px;
-    border-radius: 50px;
-    font-family: 'Poppins';
-    font-size: 0.78rem;
-    margin-left: 10px;
-    transform: scale(1);
-    transition: all .4s ,--gradient-angle .5s;
-  }
-
-  .submit:hover{
-    box-shadow: 0px 0px 10px .5px rgba(142, 127, 255, 0.594);
-    --gradient-angle : 280deg;
-    cursor: pointer;
-    transform: scale(1.02);
-  }
-
-  .cancel-edit{
-    color: rgb(255, 255, 255);
-    background: linear-gradient(var(--gradient-angle), rgb(255, 79, 79), rgb(214, 33, 20));
-    padding:  0px 18px;
-    height: 40px;
-    border: none;
-    border-radius: 50px;
-    font-family: 'Poppins';
-    font-size: 12px;
-    margin-left: 10px;
-    transform: scale(1);
-    transition: all .4s ,--gradient-angle .5s;
-  }
-  
-  .cancel-edit:hover{
-    box-shadow: 0px 0px 10px .5px rgb(255, 60, 60);
-    --gradient-angle : 280deg;
-    cursor: pointer;
-    transform: scale(1.02);
-  }
-
-  .blocked-btn{
-    background: linear-gradient(135deg, rgb(165, 165, 165), #696969);
-    border: 2px solid rgb(67, 67, 67);
-    pointer-events: none;
-    
-  }
-  
-  .unblocked-btn{
-    background: linear-gradient(var(--gradient-angle), rgb(148, 134, 255), #286cff);
-    border: 2px solid rgb(81, 66, 193);
-  }
-
-
-  h1{
-    font-family: 'Montserrat Alternates';
-    margin: 0px auto 60px auto;
-    border-bottom: 1px dashed grey;
-    font-size: 3rem;
-    width: max-content;
-    color: rgba(245, 245, 245, 0.82);
-  }
-
-  h2{
-    font-family: 'Poppins';
-    margin: 40px auto 20px auto;
-    width: max-content;
-    color: rgba(245, 245, 245, 0.893);
-    border-bottom: 1px solid grey;
-  }
-
-  .task-container{
-    height: auto;
-    width: 100%;
-    margin: auto;
-  }
-
-  .todos{
-    height: auto;
-    width: 80%;
-    margin: auto;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    border: 2px solid grey;
-    padding: 0px 20px;
-    border-radius: 20px;
-  }
-
-  .todos li{
-    display: flex;
-    align-items: center;
-    gap: 2vw;
-    /* height: 40px; */
-    width: 100%;
-    padding: 15px 0px;
-    border-bottom: 1px solid grey;
-  }
-
-  li .text{
-    flex: 1;
-    width: 60%;
-    min-width: 40%;
-    word-wrap: break-word;
-    font-family: "Ubuntu";
-    text-align: left;
-    font-size: large;
-    font-weight: 600;
-  }
-
-  li .buttons{
-    display: flex;
-    min-width: 30%;
-    justify-content: center;
-    align-items: center;
-    gap: 8px;
-  }
-
-  .buttons .delete{
-    border: none;
-    border-radius: 10px;
-    height: 35px;
-    width: 35px;
-    background: linear-gradient(var(--gradient-angle), rgb(255, 79, 79), rgb(214, 33, 20));
-    transform: scale(1);
-    transition: all .4s ,--gradient-angle .5s;
-  }
-  .buttons .edit{
-    border: none;
-    border-radius: 10px;
-    height: 35px;
-    width: 35px;
-    padding-left: 2px;
-    background: linear-gradient(var(--gradient-angle), rgb(89, 117, 255), rgb(93, 35, 252));
-    transform: scale(1);
-    transition: all .4s ,--gradient-angle .5s;
-
-  }
-
-  .buttons i{
-    display: inline-block;
-    text-align: center;
-  }
-
-  .buttons .delete:hover{
-    cursor: pointer;
-    --gradient-angle : 280deg;
-    box-shadow: 0px 0px 16px 1px rgb(255, 60, 60);
-    transform: scale(1.05);
-  }
-  .buttons .edit:hover{
-    cursor: pointer;
-    --gradient-angle : 280deg;
-    box-shadow: 0px 0px 16px 1px rgb(88, 102, 255);
-    transform: scale(1.05);
-    
-  }
-
-  .buttons .up-down-btn{
-    display: flex;
-    gap: 4px;
-    border: 1.5px solid rgba(158, 255, 149, 0.21);
-    border-radius: 8px;
-    padding: 3px 2.6px;
-
-  }
-
-  .buttons .move-up,
-  .buttons .move-down{
-    border: none;
-    border-radius: 6px;
-    height: 30px;
-    width: 30px;
-    background: linear-gradient(var(--gradient-angle), #15f0a7, #15b4bd);
-    font-weight: 700;
-    color: whitesmoke;
-    transform: scale(1);
-    transition: all .4s ,--gradient-angle .5s;
-  }
-
-  .buttons .move-up:hover,
-  .buttons .move-down:hover{
-    transform: scale(1.05);
-    cursor: pointer;
-    --gradient-angle : 280deg;
-    box-shadow: 0px 0px 10px .1px #3bff9ac4;
-  }
-
-  .edit-save-btn{
-    display: inline-block;
-  }
-
-  .empty-tasks{
-    position: relative;
-    height: 280px;
-    aspect-ratio: 1/1;
-    margin: auto;
-    top: 50%;
-  }
-
-  .empty-tasks img{
-    height: auto;
-    width: 100%;
-    object-fit: contain;
-    opacity: .4;
-  }
-
-  /* Swal Fires */
-
-  .my-toast {
-    font-size: 12px;
-    height: auto;
-    /* line-height: 50px; */
-    padding: 0px 80px 10px 80px;
-    border-radius: 12px;
-    font-family: 'Poppins', sans-serif;
-    box-shadow: 0 4px 15px rgba(0,0,0,0.3);
-  }
-
-
-  /* Media Queries */
-
-  @media (max-width : 500px) {
-    li .buttons{
-      min-width: 15%;
-      gap: 4px;
-    }
-    .buttons .delete,
-    .buttons .edit{
-      height: 25px;
-      width: 25px;
-    }
-    .buttons .move-up,
-    .buttons .move-down{
-      height: 20px;
-      width: 20px;
-    }
-
-    li .text{
-      font-size: medium;
-    }
-  }
